Rename documentation from "Mint Starter Kit" to "Ravell" and update content to reflect new branding and features. Revise structure to focus on product capabilities, including asking questions and connecting sources, while removing outdated sections. Update links and descriptions throughout the documentation for consistency with the new product identity.

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,63 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Ravell is your Product Agent — evidence-backed answers from Linear, Notion, Intercom, and more"
 ---
 
-## Setting up
+## What is Ravell?
 
-Get your documentation site up and running in minutes.
+**Ravell is your Product Agent:** one place to ask questions and get evidence-backed answers from your Linear, Notion, Intercom, Slack, and more — in seconds, with citations. We don't replace your tools; we turn them into a **single source of truth** for product intelligence.
+
+---
+
+## Three ways to get value
+
+| What | How |
+|------|-----|
+| **Ask** | Type a question in plain language; get an answer with citations in seconds. |
+| **Automations** | Schedule recurring questions (e.g. weekly summaries); results land in your Inbox. |
+| **Connect sources** | Link Linear, Notion, Intercom, Slack. The more you connect, the better the answers. |
+
+---
+
+## Where to do what
+
+| Area | What you do |
+|------|-------------|
+| **Inbox** | Read proactive reports from your automations. |
+| **Automations** | Create and manage scheduled queries. |
+| **Sources** | Connect and manage Linear, Notion, Intercom, Slack. |
+| **Asks** | One-off questions and follow-ups; each Ask is a thread with answers and citations. |
+
+**New Ask** in the sidebar starts a new question. **Asks** lists your past and current conversations.
+
+---
+
+## Getting started
+
+- **Sign in** with your email or existing auth; create or join a workspace if prompted.
+- **Workspace** = your team's shared space. All sources, Asks, and Automations live here.
+- Use the **sidebar** to switch between Inbox, Automations, Sources, and Asks.
 
 <Card
-  title="Start here"
+  title="Quickstart"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Get up and running in minutes.
 </Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="Asks"
+  icon="message-question"
+  href="/asks"
+  horizontal
 >
-  Browse our showcase of exceptional documentation sites.
+  Learn how to ask questions and get answers with citations.
 </Card>
+
+---
+
+## In short
+
+**Sources** = what Ravell knows. **Asks** = one-off Q&A with citations. **Automations** = scheduled questions; reports go to **Inbox**. Ravell is the **institutional memory layer**: evidence-backed answers and proactive alerts so you spend less time searching and more time deciding.
