--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,62 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Get up and running with Ravell in minutes"
 ---
 
 ## Get started in three steps
 
-Get your documentation site running locally and make your first customization.
+Sign in, connect a source, and ask your first question.
 
-### Step 1: Set up your local environment
+### Step 1: Sign in and create a workspace
 
 <AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
+  <Accordion icon="user" title="Sign in">
+    Go to [app.ravell.io](https://app.ravell.io) and sign in with your email or Google. If you're joining an existing team, accept the workspace invitation from your email.
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
+  <Accordion icon="building" title="Create or join a workspace">
+    A **workspace** is your team's shared space. If you're the first from your team:
+    1. Create a new workspace and give it a name.
+    2. Invite teammates from **Settings → Members**.
     
-    <Tip>Your preview updates automatically as you edit files.</Tip>
+    If you received an invitation, accept it to join an existing workspace.
   </Accordion>
 </AccordionGroup>
 
-### Step 2: Deploy your changes
+### Step 2: Connect your first source
 
 <AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
+  <Accordion icon="plug" title="Connect Linear, Notion, Intercom, or Slack">
+    1. Open **Sources** in the sidebar (or **Settings → Integrations**).
+    2. Click **Connect** next to Linear, Notion, Intercom, or Slack.
+    3. Complete the OAuth flow in the popup.
+    4. For Linear: select which teams to sync. For Slack: select which channels to index.
     
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
-
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
+    Ravell will start syncing your data. The more sources you connect, the better your answers.
+  </Accordion>
+  <Accordion icon="clock" title="Wait for sync">
+    Initial sync can take a few minutes depending on how much data you have. You can start asking questions once sync completes — check **Sources** for status.
   </Accordion>
 </AccordionGroup>
 
-### Step 3: Go live
+### Step 3: Ask your first question
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
+<Accordion icon="message-question" title="Ask in plain language">
+  1. Click **New Ask** in the sidebar or use the main input.
+  2. Type a question, e.g. "What did customers say about checkout last month?" or "What are the top open issues in our current cycle?"
+  3. Press Enter. The answer streams in with citations you can click to see the source.
+  4. Ask follow-up questions in the same thread for deeper context.
 </Accordion>
+
+---
 
 ## Next steps
 
-Now that you have your docs running, explore these key features:
-
 <CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card title="Asks" icon="message-question" href="/asks">
+    Learn how to ask effectively, use citations, and push to Notion.
+  </Card>
 </CardGroup>
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+<Tip>
+  **Pro tip:** Scope your question to specific sources (e.g. "from Linear only") for faster, more focused answers. Use the source selector in the input when available.
+</Tip>
