--- a/index.mdx
+++ b/index.mdx
@@ -9,13 +9,17 @@ description: "Ravell is your Product Agent — evidence-backed answers from Line
 
 ---
 
-## Three ways to get value
+## Core features
 
-| What | How |
-|------|-----|
-| **Ask** | Type a question in plain language; get an answer with citations in seconds. |
-| **Automations** | Schedule recurring questions (e.g. weekly summaries); results land in your Inbox. |
-| **Connect sources** | Link Linear, Notion, Intercom, Slack. The more you connect, the better the answers. |
+Ravell has three main ways to get value:
+
+| Feature | What it does |
+|---------|--------------|
+| **Web Asks** | Ask questions in the app. Ravell searches your sources, retrieves evidence, and synthesizes answers with citations. Full pipeline transparency via streaming thoughts. |
+| **Slack Agent** | Use Ravell in Slack via `/ravell`. Ask questions, create Linear issues, manage automations — all in natural language, in-thread. |
+| **Automations** | Schedule recurring questions (e.g. weekly summaries). Reports land in your Inbox and optionally in Slack. Same quality as Web Asks, on a schedule. |
+
+All three use the same connected sources (Linear, Notion, Intercom, Slack) and the same evidence-backed pipeline. Connect sources once; use them everywhere.
 
 ---
 
@@ -26,6 +30,7 @@ description: "Ravell is your Product Agent — evidence-backed answers from Line
 | **Inbox** | Read proactive reports from your automations. |
 | **Automations** | Create and manage scheduled queries. |
 | **Sources** | Connect and manage Linear, Notion, Intercom, Slack. |
+| **Context** | View and edit profiles (individual + workspace) and Memory for AI personalization. |
 | **Asks** | One-off questions and follow-ups; each Ask is a thread with answers and citations. |
 
 **New Ask** in the sidebar starts a new question. **Asks** lists your past and current conversations.
@@ -48,12 +53,48 @@ description: "Ravell is your Product Agent — evidence-backed answers from Line
 </Card>
 
 <Card
-  title="Asks"
+  title="Web Asks"
   icon="message-question"
   href="/asks"
   horizontal
 >
-  Learn how to ask questions and get answers with citations.
+  How the pipeline works, citations, follow-ups, and best practices.
+</Card>
+
+<Card
+  title="Slack Agent"
+  icon="comments"
+  href="/slack-agent"
+  horizontal
+>
+  Use Ravell in Slack: questions, Linear actions, automations.
+</Card>
+
+<Card
+  title="Automations"
+  icon="bolt"
+  href="/automations"
+  horizontal
+>
+  Schedule recurring questions, templates, Slack delivery.
+</Card>
+
+<Card
+  title="Context"
+  icon="sparkles"
+  href="/context"
+  horizontal
+>
+  Set up profiles and Memory for personalized answers.
+</Card>
+
+<Card
+  title="Shortcuts"
+  icon="keyboard"
+  href="/shortcuts"
+  horizontal
+>
+  Speed up your workflow with keyboard shortcuts.
 </Card>
 
 ---
