--- a/memory.mdx
+++ b/memory.mdx
@@ -3,6 +3,16 @@ title: "Memory"
 description: "What Ravell remembers about you across sessions"
 ---
 
+## Access via Context
+
+Memory lives in the **Context** view. Open **Context** from the sidebar to view and edit your Memory alongside your individual and workspace profiles.
+
+<Card title="Context" icon="sparkles" href="/context">
+  See how Memory and profiles work together.
+</Card>
+
+---
+
 ## What is Memory?
 
 **Memory** is Ravell's store of what it learns about you over time. When you ask questions, have conversations, or share context, Ravell can remember key facts (e.g. "You work on the checkout team" or "You prefer summaries in bullet points"). This helps personalize future answers across sessions.
