--- a/workspace-management.mdx
+++ b/workspace-management.mdx
@@ -21,11 +21,11 @@ Workspace management covers members, invitations, and roles. Owners and (where p
 
 ## Invitations
 
-**Settings → Invitations** (or **Members → Invite**) lets you invite people by email.
+**Settings → Invitations** (or **Members → Invite**) lets you invite people by email. A badge appears on Invitations when you have pending invites to review.
 
 - **Send invitation**: Enter email, optionally set role. The invitee receives an email with a link.
 - **Pending invitations**: View and cancel pending invites.
-- **Accept/Decline**: Invitees use the link to accept or decline. Once accepted, they become members.
+- **Accept/Decline**: Invitees use the link in the email to accept or decline. Once accepted, they become members.
 
 ---
 
