Update theme to "mint" in docs.json, streamline navigation structure by renaming tabs and groups, and enhance card components in index.mdx for improved clarity. Remove unnecessary CSS rules in style.css for a cleaner design.

--- a/index.mdx
+++ b/index.mdx
@@ -11,8 +11,6 @@ description: "Ravell is your Product Agent — evidence-backed answers from Line
 
 ## Core features
 
-Ravell has three main ways to get value:
-
 | Feature | What it does |
 |---------|--------------|
 | **Web Asks** | Ask questions in the app. Ravell searches your sources, retrieves evidence, and synthesizes answers with citations. Full pipeline transparency via streaming thoughts. |
@@ -43,57 +41,27 @@ All three use the same connected sources (Linear, Notion, Intercom, Slack) and t
 - **Workspace** = your team's shared space. All sources, Asks, and Automations live here.
 - Use the **sidebar** to switch between Inbox, Automations, Sources, and Asks.
 
-<Card
-  title="Quickstart"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
+<Card title="Quickstart" icon="rocket" href="/quickstart" horizontal>
   Get up and running in minutes.
 </Card>
 
-<Card
-  title="Web Asks"
-  icon="message-question"
-  href="/asks"
-  horizontal
->
+<Card title="Web Asks" icon="message-question" href="/asks" horizontal>
   How the pipeline works, citations, follow-ups, and best practices.
 </Card>
 
-<Card
-  title="Slack Agent"
-  icon="comments"
-  href="/slack-agent"
-  horizontal
->
+<Card title="Slack Agent" icon="comments" href="/slack-agent" horizontal>
   Use Ravell in Slack: questions, Linear actions, automations.
 </Card>
 
-<Card
-  title="Automations"
-  icon="bolt"
-  href="/automations"
-  horizontal
->
+<Card title="Automations" icon="bolt" href="/automations" horizontal>
   Schedule recurring questions, templates, Slack delivery.
 </Card>
 
-<Card
-  title="Context"
-  icon="sparkles"
-  href="/context"
-  horizontal
->
+<Card title="Context" icon="sparkles" href="/context" horizontal>
   Set up profiles and Memory for personalized answers.
 </Card>
 
-<Card
-  title="Shortcuts"
-  icon="keyboard"
-  href="/shortcuts"
-  horizontal
->
+<Card title="Shortcuts" icon="keyboard" href="/shortcuts" horizontal>
   Speed up your workflow with keyboard shortcuts.
 </Card>
 
